refactored into separate Maven sub modules

--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,13 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
+
+  <modules>
+    <module>ext-sockjs</module>
+    <module>ext-routematcher</module>
+  </modules>
 
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -31,7 +37,7 @@
 
   <name>Vert.x - Extensions</name>
 
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <dependencies>
     <dependency>
