--- a/ext-mongo/pom.xml
+++ b/ext-mongo/pom.xml
@@ -25,9 +25,9 @@
       <version>3.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>de.flapdoodle.embed</groupId>
-      <artifactId>de.flapdoodle.embed.mongo</artifactId>
-      <version>1.46.0</version>
+      <groupId>io.vertx</groupId>
+      <artifactId>ext-mongo-embedded-db</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
