--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <module>ext-mongo-embedded-db</module>
     <module>ext-metrics</module>
     <module>ext-rxjava</module>
+    <module>ext-web-resources</module>		
   </modules>
 
   <parent>
