--- a/ext-jca/ext-jca-examples/pom.xml
+++ b/ext-jca/ext-jca-examples/pom.xml
@@ -3,20 +3,39 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+  <!--
   <parent>
-    <artifactId>vertx-ext</artifactId>
     <groupId>io.vertx</groupId>
+    <artifactId>ext-jca</artifactId>
     <version>3.0.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
-
+  -->
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>ext-jca</artifactId>
+  <groupId>io.vertx</groupId>
+  <artifactId>ext-jca-examples</artifactId>
+  <version>3.0.0-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
+      <groupId>org.jboss.ejb3</groupId>
+      <artifactId>jboss-ejb3-ext-api</artifactId>
+      <version>2.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-hazelcast</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>ext-jca</artifactId>
       <version>3.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
@@ -77,6 +96,25 @@
   </dependencies>
 
   <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <!--
+          <webappDirectory>/sample/servlet/container/deploy/directory</webappDirectory>
+          -->
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-ear-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <defaultLibBundleDir>lib</defaultLibBundleDir>
+        </configuration>
+      </plugin>
+    </plugins>  <!--
       <plugins>
         <plugin>
           <artifactId>maven-rar-plugin</artifactId>
@@ -91,12 +129,11 @@
             </execution>
           </executions>
           <configuration>
-            <!--
             <finalName>ext-jca-adapter</finalName>
-            -->
             <includeJar>true</includeJar>
           </configuration>
         </plugin>
       </plugins>
+      -->
   </build>
 </project>
